--- a/helloworld.html
+++ b/helloworld.html
@@ -3,9 +3,11 @@
   <head>
 
   </head>
-  <body>
-
-    <h1>Stan <div id="adjective" onclick="changeAdj()">BTS</div></h1>
+  <body onclick="colorfulBackground()">
+    <div id="the name" onclick="changeFontColor()" class="democlass">stan talent</div>
+    <h1 class+"democlass">
+      STAN<div id="adjective" onclick="changeAdj()">BTS</div>
+    </h1>
 
     <script src="helloworld.js"></script>
   </body>
