--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <img src="https://www.stickpng.com/img/icons-logos-emojis/tech-companies/old-instagram-logo">
   </center>
 
+    <script src="index.js"></script>
     <script src="helloworld.js"></script>
   </body>
 </html>
